; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_init.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libmpg123/extr_readers.c_bc_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.bufferchain = type { i64, i64, i64, i64, i32*, i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.bufferchain*)* @bc_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @bc_init(%struct.bufferchain* %0) #0 {
  %2 = alloca %struct.bufferchain*, align 8
  store %struct.bufferchain* %0, %struct.bufferchain** %2, align 8
  %3 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %4 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %3, i32 0, i32 4
  store i32* null, i32** %4, align 8
  %5 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %6 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %5, i32 0, i32 4
  %7 = load i32*, i32** %6, align 8
  %8 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %9 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %8, i32 0, i32 5
  store i32* %7, i32** %9, align 8
  %10 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %11 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %10, i32 0, i32 3
  store i64 0, i64* %11, align 8
  %12 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %13 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %12, i32 0, i32 2
  store i64 0, i64* %13, align 8
  %14 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %15 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %14, i32 0, i32 1
  store i64 0, i64* %15, align 8
  %16 = load %struct.bufferchain*, %struct.bufferchain** %2, align 8
  %17 = getelementptr inbounds %struct.bufferchain, %struct.bufferchain* %16, i32 0, i32 0
  store i64 0, i64* %17, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
